--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,5 @@
 version: 2.1
 # aws cloudformation deploy --template-file .circleci/files/cloudfront.yml --stack-name InitialStack --parameter-overrides WorkflowID=kelechi1
-orbs:
-  slack: circleci/slack@4.1
 
 parameters:
   workflow_id:
@@ -163,9 +161,9 @@ jobs:
             npm install --save-dev webpack@5.73.0
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+      # - slack/notify:
+      #     event: fail
+      #     template: basic_fail_1
 
   deploy-infrastructure:
     docker:
@@ -218,7 +216,7 @@ jobs:
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints:
-            - 'ab:52:25:68:df:4c:3a:d5:48:18:55:d8:f9:3b:df:de'
+            - 'e4:c0:33:5f:4c:f5:4c:0a:63:f0:39:2d:1a:15:f8:57'
       - run:
           name: Install dependencies
           command: |
@@ -246,7 +244,7 @@ jobs:
 
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml \
-            --key-file ~/.ssh/id_rsa_ab522568df4c3ad5481855d8f93bdfde
+            --key-file ~/.ssh/id_rsa_e4c0335f4cf54c0a63f0392d1a15f857
       # save backend back to workspace
       - persist_to_workspace:
           root: ~/
@@ -340,7 +338,7 @@ jobs:
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints:
-            - 'ab:52:25:68:df:4c:3a:d5:48:18:55:d8:f9:3b:df:de'
+            - 'e4:c0:33:5f:4c:f5:4c:0a:63:f0:39:2d:1a:15:f8:57'
       # attach workspace
       - attach_workspace:
           at: ~/
@@ -364,7 +362,7 @@ jobs:
             echo "Contents of the inventory.txt file is ------$(tail -1 inventory.txt)"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml \
-            --key-file ~/.ssh/id_rsa_ab522568df4c3ad5481855d8f93bdfde
+            --key-file ~/.ssh/id_rsa_e4c0335f4cf54c0a63f0392d1a15f857
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
@@ -489,7 +487,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - 'ab:52:25:68:df:4c:3a:d5:48:18:55:d8:f9:3b:df:de'
+            - 'e4:c0:33:5f:4c:f5:4c:0a:63:f0:39:2d:1a:15:f8:57'
       - run:
           name: Install deps
           command: |
@@ -504,7 +502,7 @@ jobs:
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt node-exporter.yml \
-            --key-file ~/.ssh/id_rsa_ab522568df4c3ad5481855d8f93bdfde
+            --key-file ~/.ssh/id_rsa_e4c0335f4cf54c0a63f0392d1a15f857
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
@@ -539,9 +537,9 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - add-prometheus-node-exporter:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - add-prometheus-node-exporter:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
